--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "init-db": "node init-subscription-db.js"
+    "init-db": "node init-subscription-db.js",
+    "amplify": "amplify",
+    "amplify:dev": "amplify dev",
+    "verify-secrets": "node verify-amplify-secrets.js"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.1",
+    "@aws-amplify/backend": "^0.16.0",
+    "@aws-amplify/backend-cli": "^0.15.0",
+    "@aws-amplify/backend-functions": "^0.13.0",
+    "@aws-amplify/backend-graphql": "^0.12.0",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
     "@supabase/ssr": "^0.6.1",
