--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "repurpose-recipes",
+  "name": "dinner-surprise",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,50 +7,31 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "init-db": "node init-subscription-db.js",
     "amplify": "amplify",
-    "amplify:dev": "amplify dev",
-    "verify-secrets": "node verify-amplify-secrets.js"
+    "amplify:dev": "amplify dev"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.11.1",
-    "@aws-amplify/backend": "^0.16.0",
-    "@aws-amplify/backend-cli": "^0.15.0",
-    "@aws-amplify/backend-functions": "^0.13.0",
-    "@aws-amplify/backend-graphql": "^0.12.0",
-    "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.3.0",
-    "@supabase/ssr": "^0.6.1",
-    "@tailwindcss/postcss": "^4.1.5",
-    "aws-amplify": "^6.14.4",
-    "date-fns": "^4.1.0",
-    "lru-cache": "^11.1.0",
-    "next": "15.3.2",
-    "openai": "^4.97.0",
-    "posthog-js": "^1.239.1",
-    "react": "^19.1.0",
-    "react-datepicker": "^8.3.0",
-    "react-dom": "^19.1.0",
-    "stripe": "^18.1.0"
+    "@aws-amplify/ui-react": "^6.1.1",
+    "@aws-amplify/backend": "^0.12.0",
+    "@aws-amplify/backend-cli": "^0.12.0",
+    "@aws-amplify/backend-function": "^0.9.0",
+    "aws-amplify": "^6.0.17",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.7",
+    "next": "^14.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "@supabase/supabase-js": "^2.49.4",
-    "@types/node": "^22.15.14",
-    "@types/react": "^19.1.3",
-    "@types/react-datepicker": "^7.0.0",
-    "@types/react-dom": "^19.1.3",
-    "@types/stripe": "^8.0.416",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
-    "autoprefixer": "^10.4.21",
-    "dotenv": "^16.5.0",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.2",
-    "glob": "^11.0.2",
-    "postcss": "^8.5.3",
-    "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.5",
-    "tailwindcss-defaults": "^1.0.2",
-    "typescript": "^5.8.3"
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   }
 }
