--- a/amplify.yml
+++ b/amplify.yml
@@ -1,15 +1,15 @@
-version: 1
+version: 2
 backend:
   phases:
     build:
       commands:
-        - npm install
-        - npx amplify build
+        - npm ci
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     preBuild:
       commands:
-        - npm install
+        - npm ci
     build:
       commands:
         - npm run build
@@ -38,4 +38,7 @@ frontend:
       # Amplify API configuration
       NEXT_PUBLIC_AMPLIFY_API_ENDPOINT: ${NEXT_PUBLIC_AMPLIFY_API_ENDPOINT}
       NEXT_PUBLIC_AMPLIFY_API_KEY: ${NEXT_PUBLIC_AMPLIFY_API_KEY}
-      NEXT_PUBLIC_AMPLIFY_REGION: ${NEXT_PUBLIC_AMPLIFY_REGION} 
+      NEXT_PUBLIC_AMPLIFY_REGION: ${NEXT_PUBLIC_AMPLIFY_REGION}
+      NEXT_PUBLIC_AMPLIFY_REST_ENDPOINT: ${NEXT_PUBLIC_AMPLIFY_REST_ENDPOINT}
+      # Function secrets will be securely handled by Amplify
+      # Do not include secrets here - set them in the Amplify Console using the secret() function 
