--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "amplify": "amplify",
-    "amplify:dev": "amplify dev"
+    "amplify:pipeline": "npx ampx pipeline-deploy"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.1",
@@ -21,7 +20,8 @@
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "openai": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
